@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>750</width>
-    <height>612</height>
+    <height>638</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,7 +32,7 @@
      <item>
       <widget class="QLabel" name="label_99">
        <property name="text">
-        <string>Query and submit messages every</string>
+        <string>Query the incoming server every</string>
        </property>
        <property name="buddy">
         <cstring>poptasticRefresh</cstring>
