@@ -21,6 +21,7 @@
 14.  Corrected memset() usage in spoton_crypt::publicKeyDecryptNTRU().
      Also modified casts.
 15.  Corrected initial displays of communication dialogs.
+16.  Post Poptastic messages every 2.5 seconds.
 
 0.19 (02/22/2015)
 
